Fixed final message text alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,6 +93,7 @@ p {
 
 .final-msg-container {
     display: none;
+    text-align: center;
 }
 
 #final-message {
